--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git@github.com:securedeveloper/js-xlsx.git"
+		"url": "https://github.com/arunkmoury/tempa-xlsx.git"
 	},
 	"scripts": {
 		"pretest": "git submodule init && git submodule update",
